# paths_as_strings

./: .gitattributes  .gitignore  Cargo.toml  README.md
examples/: make_awkward_dir.rs  path_analyzer.rs
src/: lib.rs
